<resources>
    <string name="app_name">Popular Movies</string>
    <string name="edit_text_hint_search">Enter a query, then click Search</string>

    <string name="error_message">Failed to get results. Please try again.</string>

    <!-- Menu items for MainActivity-->
    <string name="popular_movies_search">Popular Movies</string>
    <string name="highly_rated_movies_search">Highly Rated Movies</string>
    <string name="my_favorite_movies">My Favorites</string>
    <string name="search_favorite_movies">Search Favorites</string>

    <!-- SearchMoviesActivity -->
    <string name="search">Search</string>
    <string name="search_hint">Enter movie title</string>
    <string name="find_a_favorite_movie">Find a Favorite Movie</string>
    <string name="enter_a_movie_title">Please enter a movie title</string>

    <string name="no_results_found">No results found</string>
    <string name="no_internet_connection">No Internet connection</string>
    <string name="invalid_entry">Invalid entry</string>

    <!-- Detail Activity -->
    <string name="release_date">Release Date: </string>
    <string name="poster_path">Poster URL: </string>
    <string name="vote_average">Vote Average: </string>
    <string name="movie_synopsis">Synopsis </string>
    <string name="movie_id">Movie Id: </string>
    <string name="user_reviews">User Reviews</string>
    <string name="trailers">Trailers</string>
    <string name="trailer_button">Show Trailers</string>
    <string name="favorites_button">Add</string>
    <string name="remove_favorites_button">Remove</string>
    <string name="watch_trailer">Watch A Trailer</string>


    <!-- SettingsActivity -->
    <string name="action_settings">Select Popularity Type</string>

    <!--  Used by Preferences   -->

    <string name="pref_show_most_popular_label">Show Most Popular</string>
    <string name="pref_show_highly_rated_label">Show Highly Rated</string>
    <string name="pref_show_my_favorites_label">Show My Favorites</string>

    <string name="pref_show_most_popular_key" translatable="false">show_most_popular</string>
    <string name="pref_show_highly_rated_key" translatable="false">show_highly_rated</string>
    <string name="pref_show_my_favorites_key" translatable="false">show_my_favorites</string>

    <!-- Summary for Checkboxes -->
    <string name="pref_show_true">Shown</string>
    <string name="pref_show_false">Hidden</string>

    <!-- Preference Screen -->
    <!-- Labels -->
    <string name="pref_popularity_label_most_popular">Most Popular Movies</string>
    <string name="pref_popularity_label_highly_rated">Highly Rated Movies</string>
    <string name="pref_popularity_label_my_favorites">My Favorites Movies</string>

    <!-- Values -->
    <string name="pref_popularity_most_popular_value" translatable="false">Most Popular</string>
    <string name="pref_popularity_highly_rated_value" translatable="false">Highly Rated</string>
    <string name="pref_popularity_my_favorites_value" translatable="false">My Favorites</string>

    <string name="pref_key" translatable="false">popularity</string>

    <string name="pref_label">Select Popularity Type</string>

</resources>
